--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
   "strapi": {
     "uuid": "5e2a039a-e82c-4db9-80d8-5b2242e2ac5e"
   },
+  "engines": {
+    "node": ">=18.0.0 <=20.x.x"
+  },
   "license": "MIT"
 }
