--- a/strapi/package.json
+++ b/strapi/package.json
@@ -20,6 +20,7 @@
     "@strapi/plugin-documentation": "^4.19.0",
     "@strapi/plugin-i18n": "4.19.0",
     "@strapi/plugin-users-permissions": "4.19.0",
+    "@strapi/provider-upload-cloudinary": "^4.19.0",
     "@strapi/strapi": "4.19.0",
     "pg": "^8.11.3",
     "pg-connection-string": "^2.6.2",
