--- a/strapi/docker-compose.local.yml
+++ b/strapi/docker-compose.local.yml
@@ -5,7 +5,7 @@ services:
     image: postgres:14
     command: postgres -c 'max_connections=500'
     restart: always
-    container_name: pkt-strapi-postgres
+    container_name: phi-strapi-postgres
     ports:
       - 5432:5432
     volumes:
