--- a/strapi/package.json
+++ b/strapi/package.json
@@ -27,8 +27,12 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-duplicate-button": "^1.1.14",
     "strapi-plugin-import-export-entries": "^1.23.1",
+    "strapi-plugin-lottie": "^0.2.2",
+    "strapi-plugin-menus": "^1.6.0",
     "strapi-plugin-multi-select": "^1.2.3",
+    "strapi-plugin-redirects": "^0.0.6",
     "styled-components": "5.3.3"
   },
   "author": {
