--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -13,16 +13,22 @@
     "copytypes": "node ../copyTypes.js"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "@svgr/webpack": "^8.1.0",
+    "framer-motion": "^11.0.3",
+    "luxon": "^3.4.4",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@strapi/strapi": "^4.19.0",
+    "@types/color": "^3.0.6",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "color": "^4.2.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
