--- a/nextjs/tsconfig.json
+++ b/nextjs/tsconfig.json
@@ -22,6 +22,6 @@
       "@strapi/*": ["../strapi/src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/Gradient.ts"],
   "exclude": ["node_modules"]
 }
