--- a/strapi/package.json
+++ b/strapi/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@bn-digital/strapi-plugin-field-uuid": "^1.2.12",
+    "@sendgrid/mail": "^8.1.3",
     "@strapi/plugin-cloud": "4.19.0",
     "@strapi/plugin-documentation": "^4.19.0",
     "@strapi/plugin-i18n": "4.19.0",
